--- a/front_vue/netfidia/public/index.html
+++ b/front_vue/netfidia/public/index.html
@@ -17,7 +17,7 @@
 
   <style>
     body {
-      /* background-color: #141414; */
+      background-color: #141414;
       color: #fff;
     }
   </style>
